...
    }
   
    @IBOutlet weak var spinner: UIActivityIndicatorView!
    
    @IBOutlet weak var titleLabel: UILabel! {
        didSet {
            titleLabel.accessibilityIdentifier = "Title Label"
        }
    }
    @IBOutlet weak var userNameLabel: UILabel!
    
    @IBOutlet weak var routeButton: UIButton! {
        didSet {
            routeButton.accessibilityIdentifier = "Route Button"
        }
    }
    
    // MARK: - メソッド
    
    override func viewDidLoad() {
...
